stable version with 10 levels

--- a/src/components/card/card.module.scss
+++ b/src/components/card/card.module.scss
@@ -13,6 +13,8 @@
   height: 10rem;
   color: #ddd;
   background-color: #222;
+  border-radius: 20px;
+  box-shadow: #ddd;
   cursor: pointer;
 
   &.true {
