--- a/src/components/game/game.module.scss
+++ b/src/components/game/game.module.scss
@@ -3,7 +3,6 @@
   width: 100vw;
   height: 100vh;
   display: flex;
-  justify-content: center;
   align-items: center;
   vertical-align: middle;
   flex-direction: column;
@@ -12,11 +11,38 @@
 .TopBar {
   height: 20%;
   width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  vertical-align: middle;
+  font-size: 36px;
+  .BoardPart {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    vertical-align: middle;
+    width: 80%;
+  }
+  .HighscorePart {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    vertical-align: middle;
+    width: 20%;
+    font-weight: bold;
+  }
+}
+.CurrentLevel {
+  text-align: center;
+  width: 50%;
+}
+.CurrentScore {
+  text-align: center;
+  width: 50%;
 }
 .Content {
   display: flex;
   flex-direction: row;
-  height: 80%;
   width: 100%;
 }
 
