--- a/src/components/game-result/game-result.module.scss
+++ b/src/components/game-result/game-result.module.scss
@@ -10,9 +10,24 @@
   vertical-align: middle;
   background-color: rgba(0, 0, 0, 0.2);
   .Modal {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
     color: black;
-    width: 30%;
-    height: 30%;
+    width: 40%;
     background-color: rgba(255, 255, 255, 0.8);
   }
+  .ModalWrapper {
+    padding: 2rem;
+  }
+  .Button {
+    width: 100%;
+    text-align: center;
+  }
+}
+
+.Inputs {
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row;
 }
