--- a/src/components/levels/create-level.module.scss
+++ b/src/components/levels/create-level.module.scss
@@ -56,3 +56,9 @@
   cursor: pointer;
   text-align: center;
 }
+
+.ErrorMessage {
+  text-align: center;
+  color: #ff2222;
+  font-weight: bold;
+}
