--- a/src/components/game-result/game-result.module.scss
+++ b/src/components/game-result/game-result.module.scss
@@ -51,3 +51,10 @@
     cursor: pointer;
   }
 }
+
+.NameError {
+  margin-top: 0.5rem;
+  color: #dd2222;
+  font-size: 16px;
+  font-weight: bold;
+}
