--- a/src/components/game/game.module.scss
+++ b/src/components/game/game.module.scss
@@ -93,7 +93,7 @@
     color: black;
     width: 50%;
 
-    background-color: rgba(255, 255, 255);
+    background-color: #ccc;
     padding: 2rem;
   }
   .Button {
