--- a/src/components/game-result/game-result.module.scss
+++ b/src/components/game-result/game-result.module.scss
@@ -25,7 +25,11 @@
     text-align: center;
   }
 }
-
+.GameOver {
+  font-size: 28px;
+  font-weight: bold;
+  margin-bottom: 4rem;
+}
 .Inputs {
   display: flex;
   justify-content: space-around;
