--- a/src/components/game/game.module.scss
+++ b/src/components/game/game.module.scss
@@ -91,10 +91,8 @@
     flex-direction: column;
     justify-content: start;
     color: black;
-    width: 50%;
-
     background-color: #ccc;
-    padding: 2rem;
+    width: 60vw;
   }
   .Button {
     width: 100%;
