--- a/src/components/levels/create-level.module.scss
+++ b/src/components/levels/create-level.module.scss
@@ -1,4 +1,5 @@
 .CreateWrapper {
+  width: 70%;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -64,10 +65,32 @@
 }
 
 .ShuffleWrapper {
-  margin-top: 2rem;
-  text-align: center;
+  margin-bottom: 2rem;
+  display: flex;
+  justify-content: space-between;
   .Button {
-    font-size: 16px;
-    padding: 0.5rem 1.5rem;
+    font-size: 12px;
+    width: 40%;
+    padding: 0.5rem 1rem;
   }
+}
+
+.SubTitle {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.ModalWrapper {
+  display: flex;
+  flex-direction: row;
+}
+
+.WordsTable {
+  width: 20%;
+  padding: 1rem;
+}
+
+.WordsList {
+  max-height: 40vh;
+  overflow: scroll;
 }
