--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
   height: 40vmin;
   pointer-events: none;
 }
+@import url('https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&display=swap');
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
