--- a/src/components/board/board.module.scss
+++ b/src/components/board/board.module.scss
@@ -1,20 +1,45 @@
 .BoardWrapper {
+  width: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+  vertical-align: middle;
+  align-items: center;
+  height: 605px;
 }
 
 .HintRow {
-  width: 100%;
   display: flex;
+  height: 70px;
+  width: 688px;
+  font-size: 40px;
+  border-radius: 10px;
+  background-color: #3b738a;
   justify-content: center;
-  font-size: 48px;
-  margin-bottom: 2rem;
+  align-items: center;
+  vertical-align: middle;
+  position: relative;
+  .correctWords {
+    position: absolute;
+    top: -50px;
+    font-size: 51px;
+    right: 10%;
+    background-color: #ff00ff;
+    border-radius: 50px;
+    height: 100px;
+    width: 100px;
+    vertical-align: middle;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+  }
 }
 
 .Board {
-  width: 100%;
+  width: 688px;
+  height: 480px;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(3, 1fr);
-  position: relative;
+  justify-content: space-between;
+  grid-template-columns: repeat(3, auto);
+  grid-template-rows: repeat(3, auto);
 }
