--- a/src/components/card/card.module.scss
+++ b/src/components/card/card.module.scss
@@ -1,7 +1,6 @@
 .CardWrapper {
   justify-content: center;
   display: flex;
-  padding: 1rem;
 }
 
 .Card {
@@ -9,10 +8,11 @@
   justify-content: center;
   align-items: center;
   vertical-align: middle;
-  width: 10rem;
-  height: 10rem;
-  color: #ddd;
-  background-color: #222;
+  height: 130px;
+  width: 202px;
+  font-size: 20px;
+  background-color: #ffffff;
+  color: #000;
   border-radius: 20px;
   box-shadow: #ddd;
   cursor: pointer;
