--- a/src/container/background/background.module.scss
+++ b/src/container/background/background.module.scss
@@ -5,6 +5,6 @@
   display: flex;
   justify-content: center;
   vertical-align: middle;
-  background-color: #000;
+  background: linear-gradient(320deg, #f27121, #e94057, #8a2387);
   z-index: -1;
 }
