--- a/src/components/game-result/game-result.module.scss
+++ b/src/components/game-result/game-result.module.scss
@@ -13,7 +13,7 @@
     flex-direction: column;
     justify-content: start;
     color: black;
-    width: 50%;
+    width: 60%;
     background: rgba(255, 255, 255, 0.5);
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(255, 255, 255, 0.3);
@@ -22,7 +22,7 @@
     border: 1px solid rgba(255, 255, 255, 1);
   }
   .ModalWrapper {
-    padding: 2rem;
+    padding: 3rem;
     position: relative;
   }
   .Button {
@@ -42,7 +42,24 @@
 }
 
 .PlayerWrapper {
-  height: 100px;
+  height: 200px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.TextInputCustom {
+  width: 20rem;
+}
+
+.PlayerNameInput {
+  display: flex;
+  flex-direction: column;
+  vertical-align: middle;
+}
+.InputTitle {
+  font-size: 24px;
+  margin-bottom: 1rem;
 }
 
 .ButtonRow {
@@ -65,6 +82,9 @@
     border: 1px solid rgba(255, 255, 255, 1);
     border-radius: 5px;
     cursor: pointer;
+    &:hover {
+      transform: scale(1.05);
+    }
   }
 }
 
