--- a/src/components/player/create-player.module.scss
+++ b/src/components/player/create-player.module.scss
@@ -1,21 +1,27 @@
-.NewPlayer {
-  height: 25vh;
-  text-align: center;
-}
-
 .Title {
   text-align: center;
   font-size: 24px;
   font-weight: bold;
-  margin-bottom: 5rem;
+}
+
+.Inputs {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  vertical-align: middle;
 }
 
 .Button {
-  margin: 2rem 1rem;
+  margin-left: 2rem;
   padding: 0.5rem 2rem;
   background-color: rgba(0, 0, 0);
   border: 0px solid rgba(0, 0, 0, 0);
   color: #ddd;
   border-radius: 5px;
   cursor: pointer;
+}
+
+.TextInputCustom {
+  width: 20rem;
 }
