--- a/src/container/background/background.module.scss
+++ b/src/container/background/background.module.scss
@@ -8,3 +8,23 @@
   background: linear-gradient(320deg, #f27121, #e94057, #8a2387);
   z-index: -1;
 }
+.RectangleWrapper {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  display: block;
+}
+.Rectangle {
+  position: absolute;
+  background: rgba(255, 255, 255, 0.16);
+  border-radius: 6px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(2px);
+  -webkit-backdrop-filter: blur(1px);
+  border: 1px solid rgba(255, 255, 255, 0.13);
+  width: var(--width);
+  height: var(--height);
+  top: var(--yPosition);
+  left: var(--xPosition);
+  transform: rotate(var(--rotate));
+}
