--- a/src/components/game-result/game-result.module.scss
+++ b/src/components/game-result/game-result.module.scss
@@ -12,14 +12,14 @@
     display: flex;
     flex-direction: column;
     justify-content: start;
-    color: black;
+    color: #ddd;
     width: 60%;
-    background: rgba(255, 255, 255, 0.5);
+    background: rgba(255, 255, 255, 0.25);
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(255, 255, 255, 0.3);
     backdrop-filter: blur(3.2px);
     -webkit-backdrop-filter: blur(3.2px);
-    border: 1px solid rgba(255, 255, 255, 1);
+    border: 1px solid rgba(255, 255, 255, 0.5);
   }
   .ModalWrapper {
     padding: 3rem;
@@ -30,6 +30,18 @@
     text-align: center;
   }
 }
+
+.Welcome {
+  margin-bottom: 2rem;
+  font-size: 44px;
+  text-align: center;
+}
+
+.ChooseComplexity {
+  font-size: 32px;
+  text-align: center;
+  margin-bottom: 2rem;
+}
 .GameOver {
   font-size: 28px;
   font-weight: bold;
@@ -39,6 +51,7 @@
   width: 100%;
   display: flex;
   justify-content: center;
+  margin-bottom: 4rem;
 }
 
 .PlayerWrapper {
@@ -73,14 +86,14 @@
   button {
     margin: 0rem 1rem;
     padding: 0.5rem 2rem;
-
     background: rgba(255, 255, 255, 0.1);
     border-radius: 16px;
-    box-shadow: 0 4px 30px rgba(255, 255, 255, 0.2);
-    backdrop-filter: blur(3.2px);
-    -webkit-backdrop-filter: blur(3.2px);
-    border: 1px solid rgba(255, 255, 255, 1);
+    box-shadow: 0 4px 30px rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(1px);
+    -webkit-backdrop-filter: blur(1px);
+    border: 1px solid rgba(255, 255, 255, 0.5);
     border-radius: 5px;
+    color: #222;
     cursor: pointer;
     &:hover {
       transform: scale(1.05);
