--- a/src/components/player/create-player.module.scss
+++ b/src/components/player/create-player.module.scss
@@ -13,13 +13,20 @@
 }
 
 .Button {
-  margin-left: 2rem;
+  margin: 0rem 1rem;
   padding: 0.5rem 2rem;
-  background-color: rgba(0, 0, 0);
-  border: 0px solid rgba(0, 0, 0, 0);
-  color: #ddd;
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(1px);
+  -webkit-backdrop-filter: blur(1px);
+  border: 1px solid rgba(255, 255, 255, 0.5);
   border-radius: 5px;
+  color: #222;
   cursor: pointer;
+  &:hover {
+    transform: scale(1.05);
+  }
 }
 
 .TextInputCustom {
