--- a/src/components/board/board.module.scss
+++ b/src/components/board/board.module.scss
@@ -1,11 +1,64 @@
+.GameWrapper {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-evenly;
+}
+
 .BoardWrapper {
-  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   vertical-align: middle;
   align-items: center;
   height: 605px;
+}
+
+.HeaderSpacer {
+  height: 125px;
+}
+
+.FakeColumn {
+  .ContentColumn {
+    .Column {
+      border: none;
+      background: rgba(255, 255, 255, 0);
+      box-shadow: none;
+    }
+  }
+}
+
+.ContentColumn {
+  width: 230px;
+  height: 480px;
+  display: grid;
+  justify-content: space-between;
+  grid-template-columns: repeat(1, auto);
+  grid-template-rows: repeat(3, auto);
+}
+
+.Column {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  vertical-align: middle;
+  flex-direction: column;
+  height: 130px;
+  width: 130px;
+  border-radius: 10px;
+  background: rgba(255, 255, 255, 0.35);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(255, 255, 255, 0.3);
+  backdrop-filter: blur(3.2px);
+  -webkit-backdrop-filter: blur(3.2px);
+  border: 1px solid rgba(255, 255, 255, 1);
+}
+.ColumnTitle {
+  font-size: 32px;
+  color: darkgreen;
+}
+.ColumnValue {
+  font-size: 42px;
+  color: darkgreen;
 }
 
 .HintRow {
