--- a/src/components/game/game.module.scss
+++ b/src/components/game/game.module.scss
@@ -9,7 +9,7 @@
 }
 
 .TopBar {
-  height: 20%;
+  height: 20vh;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -24,7 +24,7 @@
     width: 80%;
   }
   .Title {
-    font-family: 'Kode Mono', monospace;
+    font-family: "Kode Mono", monospace;
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
@@ -44,6 +44,8 @@
     vertical-align: middle;
     width: 20%;
     font-weight: bold;
+    max-height: 80%;
+    overflow: scroll;
   }
 }
 .CurrentLevel {
@@ -65,7 +67,7 @@
   width: 80%;
 }
 .SideBar {
-  height: 100%;
+  height: 80vh;
   width: 20%;
   color: #dddddd;
   display: flex;
