--- a/src/components/highscore/highscore.module.scss
+++ b/src/components/highscore/highscore.module.scss
@@ -1,6 +1,8 @@
 .HighscoreWrapper {
-  height: 50%;
+  height: 80vh;
   font-size: 20px;
+  overflow: scroll;
+  position: relative;
 }
 
 .Player {
