--- a/src/components/complexities/complexities.module.scss
+++ b/src/components/complexities/complexities.module.scss
@@ -3,49 +3,23 @@
 }
 .Wrapper {
   display: flex;
+  justify-content: space-evenly;
+  width: 100%;
   height: 50px;
 }
 
 .Box {
-  width: 125px;
+  width: 100%;
   display: flex;
   align-items: center;
   flex-direction: column;
   justify-content: center;
   border-radius: 16px;
+  box-sizing: border-box;
   backdrop-filter: blur(3.2px);
   -webkit-backdrop-filter: blur(3.2px);
-  border: 1px solid rgba(255, 255, 255, 1);
+  border: 1px solid rgba(255, 255, 255, 0.25);
   &:hover {
     transform: scale(1.05);
-  }
-  &.true {
-    transform: scale(1.25);
-  }
-}
-
-.Low {
-  background: rgba(201, 245, 6, 0.25);
-  box-shadow: 0 4px 30px rgba(201, 245, 6, 0.25);
-  &.true {
-    box-shadow: 0 4px 30px rgba(201, 245, 6, 0.55);
-    background: rgba(201, 245, 6, 0.85);
-  }
-}
-
-.Middle {
-  background: rgba(237, 245, 6, 0.45);
-  box-shadow: 0 4px 30px rgba(232, 174, 28, 0.25);
-  &.true {
-    box-shadow: 0 4px 30px rgba(255, 247, 0, 55);
-    background: rgba(255, 238, 0, 0.85);
-  }
-}
-.Hard {
-  background: rgb(202, 5, 5, 0.65);
-  box-shadow: 0 4px 30px rgba(202, 5, 5, 0.25);
-  &.true {
-    box-shadow: 0 4px 30px rgba(202, 5, 5, 0.55);
-    background: rgb(202, 5, 5, 0.8);
   }
 }
