--- a/src/components/game-result/game-result.module.scss
+++ b/src/components/game-result/game-result.module.scss
@@ -39,11 +39,11 @@
 
 .ChooseComplexity {
   font-size: 32px;
-  text-align: center;
-  margin-bottom: 2rem;
+  text-align: left;
+  margin: 5rem 0rem 2rem 0rem;
 }
 .GameOver {
-  font-size: 28px;
+  font-size: 40px;
   font-weight: bold;
   margin-bottom: 4rem;
 }
@@ -51,11 +51,9 @@
   width: 100%;
   display: flex;
   justify-content: center;
-  margin-bottom: 4rem;
 }
 
 .PlayerWrapper {
-  height: 200px;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -69,9 +67,18 @@
   display: flex;
   flex-direction: column;
   vertical-align: middle;
+  padding: 2rem 2rem 4rem 2rem;
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(1px);
+  -webkit-backdrop-filter: blur(1px);
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  border-radius: 16px;
+  width: 60%;
 }
 .InputTitle {
-  font-size: 24px;
+  font-size: 30px;
   margin-bottom: 1rem;
 }
 
