new highscore styling

--- a/src/components/highscore/highscore.module.scss
+++ b/src/components/highscore/highscore.module.scss
@@ -1,15 +1,41 @@
 .HighscoreWrapper {
-  height: 80vh;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  vertical-align: middle;
+  align-items: center;
+  width: 95%;
   font-size: 20px;
-  overflow: scroll;
-  position: relative;
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(255, 255, 255, 0.3);
+  backdrop-filter: blur(3.2px);
+  -webkit-backdrop-filter: blur(3.2px);
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  box-sizing: border-box;
+  padding: 1rem 0rem;
 }
-
+.Title {
+  margin: 2rem 0rem;
+  font-size: 40px;
+  text-align: center;
+  color: #ffdc7f;
+}
 .Player {
+  color: #fff;
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 5px;
+  box-shadow: 0 4px 30px rgba(255, 255, 255, 0.3);
+  backdrop-filter: blur(3.2px);
+  -webkit-backdrop-filter: blur(3.2px);
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  padding: 1rem;
   display: flex;
   flex-direction: row;
   align-items: center;
   vertical-align: middle;
+  margin-top: 0.5rem;
+  width: 80%;
 }
 
 .Rank {
@@ -24,7 +50,6 @@
 }
 .Score {
   width: 15%;
-  color: greenyellow;
   font-size: 28px;
   align-self: flex-end;
 }
