--- a/src/components/complexities/complexities.module.scss
+++ b/src/components/complexities/complexities.module.scss
@@ -19,6 +19,7 @@
   backdrop-filter: blur(3.2px);
   -webkit-backdrop-filter: blur(3.2px);
   border: 1px solid rgba(255, 255, 255, 0.25);
+  background: rgba(255, 255, 255, 0.1);
   &:hover {
     transform: scale(1.05);
   }
