--- a/src/components/game/game.module.scss
+++ b/src/components/game/game.module.scss
@@ -24,7 +24,7 @@
     width: 80%;
   }
   .Title {
-    font-family: "Kode Mono", monospace;
+    font-family: 'Kode Mono', monospace;
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
@@ -60,19 +60,21 @@
   display: flex;
   flex-direction: row;
   width: 100%;
-  height: 100%;
 }
 
 .BoardWrapper {
   width: 80%;
 }
 .SideBar {
-  height: 80vh;
+  transform: translateY(-20%);
   width: 20%;
   color: #dddddd;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
+  vertical-align: middle;
+  height: 80vh;
 }
 
 .Countdown {
