added highscore, fixed countdown

--- a/src/components/game/game.module.scss
+++ b/src/components/game/game.module.scss
@@ -66,12 +66,12 @@
   width: 80%;
 }
 .SideBar {
-  transform: translateY(-20%);
+  transform: translateY(-10vh);
   width: 20%;
   color: #dddddd;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   vertical-align: middle;
   height: 80vh;
