--- a/src/components/start-button/start-button.module.scss
+++ b/src/components/start-button/start-button.module.scss
@@ -2,6 +2,7 @@
   margin: 0rem 1rem;
   padding: 2rem 4rem;
   background: #ffdc7f;
+  border: 3px solid;
   border-color: rgba(0, 0, 0, 0);
   border-radius: 15px;
   color: #fff;
@@ -11,6 +12,7 @@
   transform: rotate(-10deg) translateY(80%);
   cursor: pointer;
   &:hover {
-    transform: scale(1.05);
+    border-color: rgba(255, 255, 255, 1);
+    border: 3px solid;
   }
 }
