new properties on home screen

--- a/src/components/game/game.module.scss
+++ b/src/components/game/game.module.scss
@@ -25,10 +25,11 @@
   }
   .Title {
     font-family: 'Kode Mono', monospace;
+    -webkit-text-stroke: 9px rgba(255, 255, 255, 0.22);
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
-    font-size: 182px;
+    font-size: 122px;
     font-weight: 700;
     line-height: 232.96px;
     letter-spacing: -0.08em;
