--- a/src/components/complexities/complexities.module.scss
+++ b/src/components/complexities/complexities.module.scss
@@ -1,26 +1,29 @@
 .Title {
-  font-size: 48px;
+  font-size: 30px;
 }
 .Wrapper {
   display: flex;
-  justify-content: space-evenly;
-  width: 100%;
-  height: 50px;
+  height: 100%;
+  padding: 0.75rem;
 }
 
 .Box {
-  width: 100%;
+  position: relative;
+  z-index: -10;
+  width: 150px;
   display: flex;
   align-items: center;
   flex-direction: column;
   justify-content: center;
+  vertical-align: middle;
   border-radius: 16px;
   box-sizing: border-box;
-  backdrop-filter: blur(3.2px);
-  -webkit-backdrop-filter: blur(3.2px);
+  backdrop-filter: blur(2px);
+  -webkit-backdrop-filter: blur(2px);
   border: 1px solid rgba(255, 255, 255, 0.25);
   background: rgba(255, 255, 255, 0.1);
   &:hover {
-    transform: scale(1.05);
+    position: relative;
+    z-index: 1000;
   }
 }
