--- a/src/components/game-result/game-result.module.scss
+++ b/src/components/game-result/game-result.module.scss
@@ -13,7 +13,8 @@
     flex-direction: column;
     justify-content: start;
     color: #ddd;
-    width: 55%;
+    width: 37%;
+    height: 50vh;
     background: rgba(255, 255, 255, 0.15);
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(255, 255, 255, 0.1);
@@ -22,7 +23,7 @@
     border: 1px solid rgba(255, 255, 255, 0.25);
   }
   .ModalWrapper {
-    padding: 3rem;
+    padding: 2.25rem;
     position: relative;
   }
   .Button {
@@ -39,13 +40,14 @@
 
 .ChooseComplexity {
   font-size: 32px;
-  text-align: left;
-  margin: 5rem 0rem 2rem 0rem;
+  text-align: center;
+  margin: 2rem 0rem 2rem 0rem;
 }
 .GameOver {
+  text-align: center;
   font-size: 40px;
   font-weight: bold;
-  margin-bottom: 4rem;
+  margin-bottom: 1rem;
 }
 .Complexity {
   width: 100%;
@@ -56,18 +58,14 @@
 .PlayerWrapper {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
-}
-
-.TextInputCustom {
-  width: 20rem;
+  justify-content: center;
 }
 
 .PlayerNameInput {
   display: flex;
   flex-direction: column;
   vertical-align: middle;
-  padding: 2rem 2rem 4rem 2rem;
+  padding: 2rem;
   background: rgba(255, 255, 255, 0.1);
   border-radius: 16px;
   box-shadow: 0 4px 30px rgba(255, 255, 255, 0.1);
@@ -75,7 +73,6 @@
   -webkit-backdrop-filter: blur(1px);
   border: 1px solid rgba(255, 255, 255, 0.25);
   border-radius: 16px;
-  width: 60%;
 }
 .InputTitle {
   font-size: 30px;
