customized textfield stylings

--- a/src/components/player/create-player.module.scss
+++ b/src/components/player/create-player.module.scss
@@ -30,5 +30,13 @@
 }
 
 .TextInputCustom {
+  border-color: #fff !important;
+  color: #fff !important;
   width: 100%;
+}
+
+.ErrorMessage {
+  color: #dd2222;
+  font-size: 14px;
+  height: 14px;
 }
