--- a/src/components/board/board.module.scss
+++ b/src/components/board/board.module.scss
@@ -1,39 +1,36 @@
+@import url('https://fonts.googleapis.com/css2?family=Jaro:opsz@6..72&family=Kode+Mono:wght@400..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 .GameWrapper {
   display: flex;
   flex-direction: row-reverse;
-  justify-content: space-evenly;
+  justify-content: center;
+  margin-top: 10vh;
 }
 
 .BoardWrapper {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  vertical-align: middle;
-  align-items: center;
-  height: 605px;
-}
-
-.HeaderSpacer {
-  height: 125px;
+  justify-content: end;
 }
 
 .FakeColumn {
-  .ContentColumn {
+  .Row {
     .Column {
-      border: none;
+      border: 1px solid rgba(255, 255, 255, 0);
       background: rgba(255, 255, 255, 0);
-      box-shadow: none;
+      backdrop-filter: none;
+      box-shadow: 0 4px 30px rgba(255, 255, 255, 0);
+      -webkit-backdrop-filter: none;
     }
   }
 }
 
-.ContentColumn {
-  width: 230px;
-  height: 480px;
-  display: grid;
+.ColumnRow {
+  display: flex;
+  flex-direction: column;
   justify-content: space-between;
-  grid-template-columns: repeat(1, auto);
-  grid-template-rows: repeat(3, auto);
+  height: 100%;
+  row-gap: 1rem;
 }
 
 .Column {
@@ -41,67 +38,113 @@
   justify-content: space-evenly;
   align-items: center;
   vertical-align: middle;
-  flex-direction: column;
-  height: 130px;
-  width: 130px;
+  flex-direction: row;
+  height: 10vh;
+  width: 10vw;
   border-radius: 10px;
-  background: rgba(255, 255, 255, 0.35);
-  border-radius: 16px;
-  box-shadow: 0 4px 30px rgba(255, 255, 255, 0.3);
-  backdrop-filter: blur(3.2px);
-  -webkit-backdrop-filter: blur(3.2px);
-  border: 1px solid rgba(255, 255, 255, 1);
+  background: rgba(255, 255, 255, 0.15);
+  box-shadow: 0 4px 30px rgba(255, 255, 255, 0.15);
+  backdrop-filter: blur(3px);
+  -webkit-backdrop-filter: blur(3px);
+  border: 1px solid rgba(255, 255, 255, 0.25);
 }
 .ColumnTitle {
   font-size: 32px;
-  color: darkgreen;
 }
 .ColumnValue {
   font-size: 42px;
-  color: darkgreen;
 }
 
 .HintRow {
+  font-family: 'Roboto', sans-serif;
+  color: #ffdc7f;
+  font-weight: 700;
   display: flex;
-  height: 70px;
-  width: 688px;
+  padding: 0.5rem 1rem;
+  width: 30vw;
   font-size: 40px;
+  background: rgba(255, 255, 255, 0.15);
   border-radius: 10px;
-  background: rgba(255, 255, 255, 0.35);
-  border-radius: 16px;
-  box-shadow: 0 4px 30px rgba(255, 255, 255, 0.3);
-  backdrop-filter: blur(3.2px);
-  -webkit-backdrop-filter: blur(3.2px);
-  border: 1px solid rgba(255, 255, 255, 1);
-  justify-content: center;
-  align-items: center;
-  vertical-align: middle;
+  box-shadow: 0 4px 30px rgba(255, 255, 255, 0.15);
+  backdrop-filter: blur(3px);
+  -webkit-backdrop-filter: blur(3px);
+  border: 1px solid rgba(255, 255, 255, 0.25);
+  justify-content: start;
   position: relative;
+  transform: translateX(-7%) translateY(10%) rotate(-1deg);
+  z-index: 10;
   .correctWords {
+    padding: 0.5rem;
     position: absolute;
     top: -60px;
     font-size: 51px;
-    right: 5%;
-    border-radius: 50px;
-    height: 100px;
-    width: 100px;
+    right: -10%;
+    border-radius: 10px;
+    height: 5rem;
+    width: 3rem;
     vertical-align: middle;
     align-items: center;
     display: flex;
     justify-content: center;
-    background: rgba(255, 0, 255, 0.57);
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(1.2px);
-    -webkit-backdrop-filter: blur(1.2px);
-    border: 1px solid rgba(255, 255, 255, 1);
+    background: rgba(255, 255, 255, 0.15);
+    box-shadow: 0 4px 30px rgba(255, 255, 255, 0.15);
+    backdrop-filter: blur(3px);
+    -webkit-backdrop-filter: blur(3px);
+    border: 1px solid rgba(255, 255, 255, 0.25);
+    transform: rotate(10deg);
   }
 }
 
 .Board {
-  width: 688px;
-  height: 480px;
   display: grid;
-  justify-content: space-between;
+  justify-content: space-around;
+  vertical-align: middle;
+  align-items: center;
   grid-template-columns: repeat(3, auto);
   grid-template-rows: repeat(3, auto);
+  width: 40vw;
+  height: 50vh;
+  border-radius: 10px;
+  background: rgba(255, 255, 255, 0.15);
+  border-radius: 10px;
+  box-shadow: 0 4px 30px rgba(255, 255, 255, 0.15);
+  backdrop-filter: blur(3.3px);
+  -webkit-backdrop-filter: blur(3.3px);
+  border: 1px solid rgba(255, 255, 255, 0.25);
+  font-family: 'Roboto', sans-serif;
+  font-style: normal;
+}
+.PlayerName {
+  font-size: 2rem;
+  margin-bottom: 2rem;
+}
+.Icon {
+  text-align: center;
+  img {
+    width: 2.5rem;
+  }
+}
+.Content {
+  width: 60%;
+  text-align: center;
+}
+
+.StatisticColumn {
+  height: 100%;
+  padding: 2.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  vertical-align: middle;
+  align-items: center;
+  border-radius: 10px;
+  background: rgba(255, 255, 255, 0.15);
+  border-radius: 10px;
+  box-shadow: 0 4px 30px rgba(255, 255, 255, 0.15);
+  backdrop-filter: blur(3px);
+  -webkit-backdrop-filter: blur(3px);
+  border: 1px solid rgba(255, 255, 255, 0.25);
+  transform: rotate(5deg) translateY(-10%);
+  z-index: 10;
+  color: #fff;
 }
