--- a/src/components/card/card.module.scss
+++ b/src/components/card/card.module.scss
@@ -4,21 +4,20 @@
 }
 
 .Card {
+  height: 11vh;
+  width: 11vw;
   display: flex;
   justify-content: center;
   align-items: center;
   vertical-align: middle;
-  height: 130px;
-  width: 202px;
-  font-size: 24px;
-  background: rgba(255, 255, 255, 0.2);
-  border-radius: 16px;
-  box-shadow: 0 4px 30px rgba(255, 255, 255, 0.3);
+  font-size: 20px;
+  background: rgba(255, 255, 255, 0.25);
+  border-radius: 10px;
+  box-shadow: 0 4px 30px rgba(255, 255, 255, 0.15);
   backdrop-filter: blur(3.2px);
   -webkit-backdrop-filter: blur(3.2px);
-  border: 1px solid rgba(255, 255, 255, 1);
-  color: #fff;
-  border-radius: 20px;
+  border: 1px solid rgba(255, 255, 255, 0.25);
+  color: #000;
   cursor: pointer;
 
   &.true {
