- updated countdown - removed complexity from level

--- a/src/components/game/game.module.scss
+++ b/src/components/game/game.module.scss
@@ -24,7 +24,8 @@
     width: 80%;
   }
   .Title {
-    font-family: 'Kode Mono', monospace;
+    font-family: "Kode Mono", monospace;
+    letter-spacing: 12px;
     -webkit-text-stroke: 9px rgba(255, 255, 255, 0.22);
     font-optical-sizing: auto;
     font-weight: 400;
