--- a/src/components/board/board.module.scss
+++ b/src/components/board/board.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row-reverse;
   justify-content: center;
-  margin-top: 10vh;
+  margin-top: 12vh;
 }
 
 .BoardWrapper {
@@ -37,8 +37,8 @@
   align-items: center;
   vertical-align: middle;
   flex-direction: row;
-  height: 10vh;
-  width: 10vw;
+  height: 9vh;
+  width: 9vw;
   border-radius: 10px;
   background: rgba(255, 255, 255, 0.15);
   box-shadow: 0 4px 30px rgba(255, 255, 255, 0.15);
@@ -54,13 +54,13 @@
 }
 
 .HintRow {
-  font-family: 'Unbounded', sans-serif;
+  font-family: "Unbounded", sans-serif;
   color: #ffdc7f;
   font-weight: 700;
   display: flex;
   padding: 0.5rem 1rem;
   width: 30vw;
-  font-size: 40px;
+  font-size: 2rem;
   background: rgba(255, 255, 255, 0.15);
   border-radius: 10px;
   box-shadow: 0 4px 30px rgba(255, 255, 255, 0.15);
@@ -100,8 +100,8 @@
   align-items: center;
   grid-template-columns: repeat(3, auto);
   grid-template-rows: repeat(3, auto);
-  width: 40vw;
-  height: 50vh;
+  width: 36vw;
+  height: 45vh;
   border-radius: 10px;
   background: rgba(255, 255, 255, 0.15);
   border-radius: 10px;
@@ -109,7 +109,7 @@
   backdrop-filter: blur(3.3px);
   -webkit-backdrop-filter: blur(3.3px);
   border: 1px solid rgba(255, 255, 255, 0.25);
-  font-family: 'Unbounded', sans-serif;
+  font-family: "Unbounded", sans-serif;
   font-style: normal;
 }
 .PlayerName {
@@ -129,7 +129,7 @@
 
 .StatisticColumn {
   height: 100%;
-  padding: 2.5rem;
+  padding: 2rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
