added pokemon game

--- a/src/components/board/board.module.scss
+++ b/src/components/board/board.module.scss
@@ -23,6 +23,16 @@
   }
 }
 
+.PlayerName {
+  font-size: 2rem;
+  margin-bottom: 2rem;
+}
+.Icon {
+  text-align: center;
+  img {
+    width: 2.5rem;
+  }
+}
 .ColumnRow {
   display: flex;
   flex-direction: column;
@@ -54,7 +64,7 @@
 }
 
 .HintRow {
-  font-family: "Unbounded", sans-serif;
+  font-family: 'Unbounded', sans-serif;
   color: #ffdc7f;
   font-weight: 700;
   display: flex;
@@ -109,18 +119,8 @@
   backdrop-filter: blur(3.3px);
   -webkit-backdrop-filter: blur(3.3px);
   border: 1px solid rgba(255, 255, 255, 0.25);
-  font-family: "Unbounded", sans-serif;
+  font-family: 'Unbounded', sans-serif;
   font-style: normal;
-}
-.PlayerName {
-  font-size: 2rem;
-  margin-bottom: 2rem;
-}
-.Icon {
-  text-align: center;
-  img {
-    width: 2.5rem;
-  }
 }
 .Content {
   width: 60%;
