--- a/src/components/complexities/complexities.module.scss
+++ b/src/components/complexities/complexities.module.scss
@@ -1,10 +1,10 @@
 .Title {
-  font-size: 30px;
+  font-size: 2vw;
 }
 .Wrapper {
   display: flex;
   height: 100%;
-  padding: 0.75rem;
+  padding: 0.75vw;
 }
 
 .Box {
