--- a/src/components/highscore/highscore.module.scss
+++ b/src/components/highscore/highscore.module.scss
@@ -5,7 +5,7 @@
   vertical-align: middle;
   align-items: center;
   width: 95%;
-  font-size: 20px;
+  font-size: 1.5vw;
   background: rgba(255, 255, 255, 0.1);
   border-radius: 16px;
   box-shadow: 0 4px 30px rgba(255, 255, 255, 0.3);
@@ -13,23 +13,22 @@
   -webkit-backdrop-filter: blur(3.2px);
   border: 1px solid rgba(255, 255, 255, 0.5);
   box-sizing: border-box;
-  padding: 1rem 0rem;
+  padding: 1vw 0vw;
 }
 .TitleWrapper {
   position: relative;
   text-align: center;
-  font-size: 40px;
+  font-size: 2.5vw;
   color: #ffdc7f;
   width: 100%;
-  margin-bottom: 1rem;
+  margin-bottom: 1vw;
 }
 .Cup {
   position: absolute;
   top: -80%;
   left: 5%;
 }
-.CupImage {
-}
+
 .Player {
   color: #fff;
   background: rgba(255, 255, 255, 0.2);
@@ -38,12 +37,12 @@
   backdrop-filter: blur(3.2px);
   -webkit-backdrop-filter: blur(3.2px);
   border: 1px solid rgba(255, 255, 255, 0.5);
-  padding: 1rem;
+  padding: 1vw;
   display: flex;
   flex-direction: row;
   align-items: center;
   vertical-align: middle;
-  margin-top: 0.5rem;
+  margin-top: 0.5vw;
   width: 80%;
 }
 
