--- a/src/components/board/board.module.scss
+++ b/src/components/board/board.module.scss
@@ -24,13 +24,13 @@
 }
 
 .PlayerName {
-  font-size: 2rem;
-  margin-bottom: 2rem;
+  font-size: 2vw;
+  margin-bottom: 2vw;
 }
 .Icon {
   text-align: center;
   img {
-    width: 2.5rem;
+    width: 2.5vw;
   }
 }
 .ColumnRow {
@@ -38,7 +38,7 @@
   flex-direction: column;
   justify-content: space-between;
   height: 100%;
-  row-gap: 1rem;
+  row-gap: 1vw;
 }
 
 .Column {
@@ -57,20 +57,20 @@
   border: 1px solid rgba(255, 255, 255, 0.25);
 }
 .ColumnTitle {
-  font-size: 32px;
+  font-size: 2vw;
 }
 .ColumnValue {
-  font-size: 42px;
+  font-size: 2.5vw;
 }
 
 .HintRow {
-  font-family: 'Unbounded', sans-serif;
+  font-family: "Unbounded", sans-serif;
   color: #ffdc7f;
   font-weight: 700;
   display: flex;
-  padding: 0.5rem 1rem;
+  padding: 0.5vw 1vw;
   width: 30vw;
-  font-size: 2rem;
+  font-size: 2vw;
   background: rgba(255, 255, 255, 0.15);
   border-radius: 10px;
   box-shadow: 0 4px 30px rgba(255, 255, 255, 0.15);
@@ -82,14 +82,14 @@
   transform: translateX(-7%) translateY(10%) rotate(-1deg);
   z-index: 10;
   .correctWords {
-    padding: 0.5rem;
+    padding: 0.5vw;
     position: absolute;
-    top: -60px;
-    font-size: 51px;
+    top: -4vw;
+    font-size: 3vw;
     right: -10%;
     border-radius: 10px;
-    height: 5rem;
-    width: 3rem;
+    height: 5vw;
+    width: 3vw;
     vertical-align: middle;
     align-items: center;
     display: flex;
@@ -119,7 +119,7 @@
   backdrop-filter: blur(3.3px);
   -webkit-backdrop-filter: blur(3.3px);
   border: 1px solid rgba(255, 255, 255, 0.25);
-  font-family: 'Unbounded', sans-serif;
+  font-family: "Unbounded", sans-serif;
   font-style: normal;
 }
 .Content {
@@ -129,7 +129,7 @@
 
 .StatisticColumn {
   height: 100%;
-  padding: 2rem;
+  padding: 2vw;
   display: flex;
   flex-direction: column;
   justify-content: center;
