--- a/src/components/card/card.module.scss
+++ b/src/components/card/card.module.scss
@@ -10,7 +10,7 @@
   justify-content: center;
   align-items: center;
   vertical-align: middle;
-  font-size: 0.75rem;
+  font-size: 0.75vw;
   background: rgba(255, 255, 255, 0.25);
   border-radius: 10px;
   box-shadow: 0 4px 30px rgba(255, 255, 255, 0.15);
