--- a/src/components/player/create-player.module.scss
+++ b/src/components/player/create-player.module.scss
@@ -1,6 +1,6 @@
 .Title {
   text-align: center;
-  font-size: 24px;
+  font-size: 1.5vw;
   font-weight: bold;
 }
 
@@ -13,8 +13,8 @@
 }
 
 .Button {
-  margin: 0rem 1rem;
-  padding: 0.5rem 2rem;
+  margin: 0vw 1vw;
+  padding: 0.5vw 2vw;
   background: rgba(255, 255, 255, 0.1);
   border-radius: 16px;
   box-shadow: 0 4px 30px rgba(255, 255, 255, 0.1);
@@ -37,6 +37,6 @@
 
 .ErrorMessage {
   color: #dd2222;
-  font-size: 14px;
-  height: 14px;
+  font-size: 1vw;
+  height: 1vw;
 }
