--- a/src/components/start-button/start-button.module.scss
+++ b/src/components/start-button/start-button.module.scss
@@ -1,6 +1,6 @@
 .NewGameButton {
-  margin: 0rem 1rem;
-  padding: 2rem 4rem;
+  margin: 0vw 1vw;
+  padding: 2vw 4vw;
   background: #ffdc7f;
   border: 3px solid;
   border-color: rgba(0, 0, 0, 0);
