--- a/src/components/statistics/statistics.module.scss
+++ b/src/components/statistics/statistics.module.scss
@@ -1,6 +1,6 @@
 .StatisticColumn {
   height: 100%;
-  padding: 2rem;
+  padding: 2vw;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -19,13 +19,13 @@
 }
 
 .PlayerName {
-  font-size: 2rem;
-  margin-bottom: 2rem;
+  font-size: 2vw;
+  margin-bottom: 2vw;
 }
 .Icon {
   text-align: center;
   img {
-    width: 2.5rem;
+    width: 2.5vw;
   }
 }
 .ColumnRow {
@@ -33,7 +33,7 @@
   flex-direction: column;
   justify-content: space-between;
   height: 100%;
-  row-gap: 1rem;
+  row-gap: 1vw;
 }
 
 .Column {
@@ -52,8 +52,8 @@
   border: 1px solid rgba(255, 255, 255, 0.25);
 }
 .ColumnTitle {
-  font-size: 32px;
+  font-size: 2vw;
 }
 .ColumnValue {
-  font-size: 42px;
+  font-size: 2.5vw;
 }
