--- a/src/pokemon/comps/start-page/start-page.module.scss
+++ b/src/pokemon/comps/start-page/start-page.module.scss
@@ -1,6 +1,6 @@
 .NewGameButton {
-  margin: 0rem 1rem;
-  padding: 2rem 5rem;
+  margin: 0vw 1vw;
+  padding: 2vw 5vw;
   background: #ffdc7f;
   border: 3px solid;
   border-color: rgba(0, 0, 0, 0);
@@ -24,7 +24,7 @@
   justify-content: center;
   align-items: center;
   vertical-align: middle;
-  font-size: 36px;
+  font-size: 2vw;
   .BoardPart {
     display: flex;
     justify-content: center;
@@ -39,7 +39,7 @@
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
-    font-size: 122px;
+    font-size: 9vw;
     font-weight: 700;
     line-height: 232.96px;
     letter-spacing: -0.08em;
