--- a/src/components/cv/contact/contact.module.css
+++ b/src/components/cv/contact/contact.module.css
@@ -1,11 +1,10 @@
 .ContactWrapper {
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.2);
-    box-shadow: 4px 8px 32px 0 rgba(0, 0, 0, 0.8);
-    backdrop-filter: blur(4px);
-    -webkit-backdrop-filter: blur(4px);
-    border: 1px solid rgba(200, 200, 200, 0.08);
-    border-color: rgba(100, 100, 100, 0.1);
-    border-radius: 5px;
+  width: 100%;
+  height: 100%;
+  background: rgba(155, 100, 155, 0.05);
+  box-shadow: 0 4px 30px rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border: 1px solid rgba(255, 255, 255, 0.25);
+  border-radius: 10px;
 }
