--- a/src/components/cv/navigation-bar/navigation-bar.module.css
+++ b/src/components/cv/navigation-bar/navigation-bar.module.css
@@ -1,37 +1,36 @@
-@media(min-width: 701px) {
-    .NavItem:hover {
-        transform: scale(1.1, 1.1);
-    }
+@media (min-width: 701px) {
+  .NavItem:hover {
+    transform: scale(1.1, 1.1);
+  }
 }
 
 .Layout {
-    height: 100%;
-    width: 100%;
-    background: rgba(0, 0, 0, 0.2);
-    box-shadow: 4px 8px 32px 0 rgba(0, 0, 0, 0.8);
-    backdrop-filter: blur(4px);
-    -webkit-backdrop-filter: blur(4px);
-    border: 1px solid rgba(200, 200, 200, 0.08);
-    border-color: rgba(100, 100, 100, 0.1);
-    border-radius: 5px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    text-align: center;
-    vertical-align: middle;
-    align-items: center;
+  height: 100%;
+  width: 100%;
+  background: rgba(155, 100, 155, 0.05);
+  box-shadow: 0 4px 30px rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border: 1px solid rgba(255, 255, 255, 0.25);
+  border-radius: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  text-align: center;
+  vertical-align: middle;
+  align-items: center;
 }
 
 .NavItem {
-    color: #eeeeee;
-    cursor: pointer;
-    width: 25%;
-    border: 1px solid;
-    border-color: rgba(0, 0, 0, 0);
-    border-radius: 5px;
-    transition: all 0.2s ease-in-out;
+  color: #eeeeee;
+  cursor: pointer;
+  width: 25%;
+  border: 1px solid;
+  border-color: rgba(0, 0, 0, 0);
+  border-radius: 5px;
+  transition: all 0.2s ease-in-out;
 }
 
 .NavItemSelected {
-    border-color: rgba(57, 211, 231, 0.55);
+  border-color: rgba(57, 211, 231, 0.55);
 }
