--- a/src/components/cv/skills/skills.module.css
+++ b/src/components/cv/skills/skills.module.css
@@ -1,42 +1,41 @@
-@media(min-width: 701px) {
-    .SkillWrapper {
-        flex-direction: column;
-    }
-    .SkillRow {
-        flex-direction: row;
-    }
+@media (min-width: 701px) {
+  .SkillWrapper {
+    flex-direction: column;
+  }
+  .SkillRow {
+    flex-direction: row;
+  }
 }
 
-@media(max-width: 701px) {
-    .SkillWrapper {
-        flex-direction: row;
-    }
-    .SkillRow {
-        flex-direction: column;
-    }
+@media (max-width: 701px) {
+  .SkillWrapper {
+    flex-direction: row;
+  }
+  .SkillRow {
+    flex-direction: column;
+  }
 }
 
 .SkillWrapper {
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.2);
-    box-shadow: 4px 8px 32px 0 rgba(0, 0, 0, 0.8);
-    backdrop-filter: blur(4px);
-    -webkit-backdrop-filter: blur(4px);
-    border: 1px solid rgba(200, 200, 200, 0.08);
-    border-color: rgba(100, 100, 100, 0.1);
-    border-radius: 5px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    vertical-align: middle;
+  width: 100%;
+  height: 100%;
+  background: rgba(155, 100, 155, 0.05);
+  box-shadow: 0 4px 30px rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border: 1px solid rgba(255, 255, 255, 0.25);
+  border-radius: 10px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  vertical-align: middle;
 }
 
 .SkillRow {
-    padding: 20px;
-    display: flex;
-    width: 100%;
-    justify-content: space-around;
-    align-items: center;
-    vertical-align: middle;
+  padding: 20px;
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
+  align-items: center;
+  vertical-align: middle;
 }
