added fetch multiplayer games

--- a/src/components/game/game.module.scss
+++ b/src/components/game/game.module.scss
@@ -24,7 +24,7 @@
     width: 80%;
   }
   .Title {
-    font-family: "Kode Mono", monospace;
+    font-family: 'Kode Mono', monospace;
     letter-spacing: 12px;
     -webkit-text-stroke: 9px rgba(255, 255, 255, 0.22);
     font-optical-sizing: auto;
@@ -65,9 +65,20 @@
 }
 
 .BoardWrapper {
-  width: 80%;
+  width: 60%;
 }
 .SideBar {
+  transform: translateY(-10vh);
+  width: 20%;
+  color: #dddddd;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  vertical-align: middle;
+  height: 80vh;
+}
+.MultiplayerGames {
   transform: translateY(-10vh);
   width: 20%;
   color: #dddddd;
