added wrapper for create multiplayer game

--- a/src/components/game/game.module.scss
+++ b/src/components/game/game.module.scss
@@ -79,6 +79,8 @@
   height: 80vh;
 }
 .MultiplayerGames {
+  position: relative;
+  z-index: 1;
   transform: translateY(-10vh);
   width: 30%;
   color: #dddddd;
