--- a/src/components/game/game.module.scss
+++ b/src/components/game/game.module.scss
@@ -61,15 +61,16 @@
 .Content {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
   width: 100%;
 }
 
 .BoardWrapper {
-  width: 60%;
+  width: 55%;
 }
 .SideBar {
   transform: translateY(-10vh);
-  width: 20%;
+  width: 15%;
   color: #dddddd;
   display: flex;
   flex-direction: column;
@@ -77,12 +78,18 @@
   align-items: center;
   vertical-align: middle;
   height: 80vh;
+  transition: all 0.4s ease-in-out;
+
+  &:hover {
+    width: 25%;
+    z-index: 5;
+  }
 }
 .MultiplayerGames {
   position: relative;
   z-index: 1;
   transform: translateY(-10vh);
-  width: 30%;
+  width: 15%;
   color: #dddddd;
   display: flex;
   flex-direction: column;
@@ -90,6 +97,11 @@
   align-items: center;
   vertical-align: middle;
   height: 80vh;
+  transition: all 0.4s ease-in-out;
+  &:hover {
+    width: 25%;
+    z-index: 5;
+  }
 }
 
 // .CreateWrapper {
